--- a/ex-1/assets/styles/style.scss
+++ b/ex-1/assets/styles/style.scss
@@ -3,12 +3,187 @@
 $center: 0 auto;
 $heading: 'Montserrat', sans-serif;
 $text: 'Open Sans', sans-serif;
+$ratingColor: #eee;
+$checkedRatingColor: #ffcc00;
+
 
 body {
     margin: $center;
     padding: 0;
+    font-family: $text;
+}
+
+.heading {
+    padding: 1vw 0;
+    text-align: center;
+    font-family: $heading;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 2vw;
+}
+
+.btn {
+    width: 32vw;
+    margin: 5vw 34%;
+    padding: 3vw 2vw;
+    font-family: $heading;
+    font-size: 2vw;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: rgb(161, 240, 207);
+    border: none;
+    border-radius: 4px;
 }
 
 .gallery {
     display: none;
+    grid-template-areas: 
+        "info photo"
+        "moreInfo moreInfo";
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr;
+    padding: 1vw 2vw;
+    margin: 0 auto;
+    width: 70vw;
+    font-size: 1.2vw;
+    &_heading { 
+        margin: 0;
+        margin-top: 10px;
+        padding-right: 5px;
+        width: 10vw;
+    }
+    &_text {
+        font-size: 1.2vw;
+    }
+    &_info {
+        grid-area: info;
+        padding: 0 2vw;
+        &_name {
+            font-family: $heading;
+            font-size: 2vw;
+        }
+        &_flex {
+            display: flex;
+            align-items: baseline;
+        }
+    }
+    &_image {
+        grid-area: photo;
+        width: 20vw;
+        margin-left: 1.3vw;
+        &_img {
+            width: 100%;
+        }
+    }
+    &_moreinfo {
+        grid-area: moreInfo;
+        padding: 0 2vw;
+        &_text {
+            text-align: justify;
+            margin-top: 5px;
+        }
+    }
 }
+
+.rate {
+    display: none;
+    margin: 0 auto;
+    width: max-content;
+    &_rating {
+        color: $ratingColor;
+        display: flex;
+        font-size: 3vw;
+        margin: $center;
+        &_item {
+            cursor: pointer;  
+            position: relative;
+            padding-left: 0.25em;
+            padding-right: 0.25em;
+        }
+        &_screenReader {
+            width: 1px !important;
+            height: 1pх !important;
+            padding: 0 !important;
+            border: none !important;
+        
+            position: absolute !important;
+            clip: rect(1px, 1px, 1px, 1px) !important;
+            overflow: hidden !important;
+        }
+        &_star {
+            display: block;
+            width: 1em;
+            height: 1em;
+            fill: currentColor;
+            stroke:  #222;
+            stroke-width: 1px;
+        }
+    }
+    &_btn {
+        width: 20vw;
+        padding: 1vw;
+        margin-top: 20px;
+        float: right;
+        border: none;
+        border-radius: 4px;
+        background-color: rgb(192, 245, 247);
+    }
+}
+
+.rate_rating_control:nth-of-type(1):focus ~ .rate_rating_item:nth-of-type(1)::before,
+.rate_rating_control:nth-of-type(2):focus ~ .rate_rating_item:nth-of-type(2)::before,
+.rate_rating_control:nth-of-type(3):focus ~ .rate_rating_item:nth-of-type(3)::before,
+.rate_rating_control:nth-of-type(4):focus ~ .rate_rating_item:nth-of-type(4)::before,
+.rate_rating_control:nth-of-type(5):focus ~ .rate_rating_item:nth-of-type(5)::before,
+.rate_rating_control:nth-of-type(6):focus ~ .rate_rating_item:nth-of-type(6)::before,
+.rate_rating_control:nth-of-type(7):focus ~ .rate_rating_item:nth-of-type(7)::before,
+.rate_rating_control:nth-of-type(8):focus ~ .rate_rating_item:nth-of-type(8)::before,
+.rate_rating_control:nth-of-type(9):focus ~ .rate_rating_item:nth-of-type(9)::before,
+.rate_rating_control:nth-of-type(10):focus ~ .rate_rating_item:nth-of-type(10)::before{
+    content: ""; 
+    box-shadow: 0 0 0 1px $checkedRatingColor;
+    border-radius: 50%;
+  
+    position: absolute;
+    top: -0.15em;
+    right: 0;
+    bottom: -0.15em;
+    left: 0;
+    z-index: -1;
+  }
+  
+  .rate_rating:hover,
+  .rate_rating_control:nth-of-type(1):checked ~ .rate_rating_item:nth-of-type(1),
+  .rate_rating_control:nth-of-type(2):checked ~ .rate_rating_item:nth-of-type(-n+2),
+  .rate_rating_control:nth-of-type(3):checked ~ .rate_rating_item:nth-of-type(-n+3),
+  .rate_rating_control:nth-of-type(4):checked ~ .rate_rating_item:nth-of-type(-n+4),
+  .rate_rating_control:nth-of-type(5):checked ~ .rate_rating_item:nth-of-type(-n+5),
+  .rate_rating_control:nth-of-type(6):checked ~ .rate_rating_item:nth-of-type(-n+6),
+  .rate_rating_control:nth-of-type(7):checked ~ .rate_rating_item:nth-of-type(-n+7),
+  .rate_rating_control:nth-of-type(8):checked ~ .rate_rating_item:nth-of-type(-n+8),
+  .rate_rating_control:nth-of-type(9):checked ~ .rate_rating_item:nth-of-type(-n+9),
+  .rate_rating_control:nth-of-type(10):checked ~ .rate_rating_item:nth-of-type(-n+10){
+    color: $checkedRatingColor;
+  }
+  
+  .rate_rating_item:hover ~ .rate_rating_item {
+    color: $ratingColor;
+  }
+
+
+  .yourRating {
+      display: none;
+      margin: $center;
+      background-color: #fff;
+      &_heading {
+          text-align: center;
+          font-size: 2em;
+          text-transform: uppercase;
+          font-family: $heading;
+      }
+      &_ul {
+          margin: $center;
+          width: max-content;
+          list-style-type: none;
+      }
+  }
