--- a/ex-1/src/scss/_header.scss
+++ b/ex-1/src/scss/_header.scss
@@ -7,5 +7,20 @@ $fontForTitle: "TenorSans";
     font-size: 1.2vw;
     letter-spacing: 0.4vw;
     text-align: center;
+
+    @include for-tablet-landscape-up {
+        font-size: 2vw;
+        padding: 2.5vw 0;
+    }
+
+    @include  for-tablet-portrait-up {
+        font-size: 3vw;
+        padding: 5vw 0;
+    }
+
+    @include for-phone-only {
+        font-size: 5.5vw;
+        padding: 10vw 0;
+    }
 }
 
