--- a/ex-1/src/scss/_search-form.scss
+++ b/ex-1/src/scss/_search-form.scss
@@ -10,16 +10,59 @@ $fontForText: 'PT Root UI';
     flex-direction: column;
     width: 40vw;
     margin: 0 auto;
+
+    @include for-tablet-landscape-up {
+        width: 50vw;
+        font-size: 2vw;
+        padding: 2.5vw 2vw;
+    }
+
+    @include for-tablet-portrait-up {
+        font-size: 4.5vw;
+        width: 90vw;
+    }
+
+    @include for-phone-only {
+        width: 90vw;
+        font-size: 6vw;
+        padding: 8vw 4vw;
+    }
+
     &__text {
         font-size: 1.1vw;
+
+        @include for-tablet-landscape-up {
+            font-size: 2vw;
+        }
+
+        @include for-tablet-portrait-up {
+            font-size: 4.5vw;
+            margin-bottom: 2vw;
+        }
+
+        @include for-phone-only {
+            font-size: 6vw;
+            margin-bottom: 2vw;
+        }
+
     }
     &__input {
         border: 1px solid rgba(128, 128, 128, 0.5);
         margin: 2vw 0 1.5vw 0;
+
         &:active,
         &:focus {
             border-color: rgb(128, 128, 128)
         }
+
+        @include for-tablet-landscape-up {
+            padding: 1.2vw 1vw;
+        }
+
+        @include for-phone-only {
+            padding: 3vw 2vw;
+        }
+
     }
     &__btn {
         @include btn_anim(1.015, 0.99);
@@ -32,5 +75,28 @@ $fontForText: 'PT Root UI';
         text-transform: uppercase;
         letter-spacing: 0.3vw;
 
+        @include for-tablet-landscape-up {
+            font-size: 2.2vw;
+            font-weight: 200;
+            padding: 1.2vw 0;
+        }
+
+        @include for-tablet-portrait-up {
+            font-size: 5.5vw;
+            margin-top: 2vw;
+            padding: 2.5vw 0;
+        }
+
+        @include for-phone-only {
+            font-size: 7vw;
+            font-weight: 200;
+            margin-top: 4vw;
+            padding: 4vw 0;
+        }
+    }
+    &__error {
+        margin: -1vw 0 2vw 0;
+        font-weight: 800;
+        color:rgb(255, 68, 0);
     }
 }
