--- a/ex-1/src/components/page-blocks/_scripts.html
+++ b/ex-1/src/components/page-blocks/_scripts.html
@@ -1,2 +1,2 @@
-<script src="scripts/libs.min.js"></script>
+<!-- <script src="scripts/libs.min.js"></script> -->
 <script src="scripts/main.min.js"></script>
