fixed html. validation ok

--- a/ex-2/assets/styles/style.css
+++ b/ex-2/assets/styles/style.css
@@ -251,6 +251,10 @@
 
 /* global styles */
 
+.hidden {
+    display: none;
+}
+
 img {
     width: 100%;
 }
@@ -264,3 +268,4 @@ img {
     font-family: "Intro"; 
     src: url("../fonts/Intro.woff");
 } 
+
