--- a/ex-1/src/styles/base/mixins.scss
+++ b/ex-1/src/styles/base/mixins.scss
@@ -69,15 +69,15 @@
 }
 
 @mixin for-tablet-portrait-up {
-	@media (max-width: 899px) { @content; }
+	@media (min-width: 600px) and (max-width: 899px) { @content; }
 }
 
 @mixin for-tablet-landscape-up {
-	@media (max-width: 1199px) { @content; }
+	@media (min-width: 900px) and (max-width: 1199px) { @content; }
 }
 
 @mixin for-desktop-up {
-	@media (max-width: 1799) { @content; }
+	@media (min-width: 1200px) and (max-width: 1799px) { @content; }
 }
 
 @mixin for-big-desktop-up {
